overflow bug fix

--- a/exam-layout/scss/main/social.scss
+++ b/exam-layout/scss/main/social.scss
@@ -30,7 +30,7 @@
   right: 0;
   background: rgba(255,255,255,0.5);
   height: 500px;
-  width: 20px;
+  max-width: 20px;
  border-bottom-left-radius: 10px;
   border-top-left-radius: 10px;
   ul{
