--- a/exam-layout/scss/style.scss
+++ b/exam-layout/scss/style.scss
@@ -49,7 +49,7 @@
 /* ^ FONTS ^ */
 $width:1920px;
 body{
-  width: 100vw;
+  width: 100%;
   max-width: 1920px;
   margin: 0 auto !important;
   padding: 0;
